Fixed error where the front page on mobile devices wasnt formatted correctly, increased font/images for front page on mobile

--- a/style.css
+++ b/style.css
@@ -215,3 +215,28 @@ h1 a {
 #topButton:hover {
     background-color: #555;
 }
+
+/* Smaller Devices Style (i.e. mobile devices) */
+@media (max-width: 990px) {
+    nav a {
+        font-size: 13px;
+    }
+
+    #top-heading {
+        padding-top: 100px;
+        font-size: 50px;
+    }
+
+    #second-heading {
+        font-size: 50px;
+    }
+
+    .avatar {
+        width: 500px;
+    }
+
+    #front-text {
+        font-size: 24px;
+    }
+
+}
